Deploy on Github

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,334 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.header{
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background-color: blue;
+  padding: 10px;
   text-align: center;
+  text-align: center;
+  color: whitesmoke;
+  font-size: larger;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.main{
+  display:flex;
   align-items: center;
+}
+
+.pic{
+  height: 650px;
+  width: 850px;
+  padding: 25px 25px;
+}
+
+.footer{
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  background-color: blue;
+  padding: 10px;
+  text-align: center;
+  text-align: center;
+  color: whitesmoke;
+  font-size:small;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.label{
+  text-align: center;
+  font-weight: bolder;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: black;
+  text-shadow: 2px;
+  margin:400px 50px;
+  font-size: 40px;
+}
+
+.instruction{
+  text-align: center;
+  font-size: large;
+  margin: 500px 50px;
+}
+.input{
+  border-radius: 10px;
+  align-items:flex-end;
+  height: 40px;
+  width: 200px;
+  padding: 10px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.input2{
+  border-radius: 10px;
+  align-items:flex-end;
+  height: 40px;
+  width: 90px;
+  padding: 10px;
+  justify-content: center;
+  margin-right: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input3{
+  border-radius: 10px;
+  align-items:flex-end;
+  height: 40px;
+  width: 90px;
+  padding: 10px;
+  justify-content: center;
+  margin-right: 0px;
 }
+
+.button{
+    align-items: center;
+    padding: 12px 25px;
+    border-radius: 20px;
+    background-color: blue;
+    color: honeydew;
+    font-size: medium;
+    margin-top: 30px;
+    margin-left: 220px;
+}
+.button:hover{
+  align-items: center;
+  padding: 12px 25px;
+  border-radius: 20px;
+  background-color: blue;
+  color: honeydew;
+  font-weight: bolder;
+  margin-top: 30px;
+  margin-left: 220px;
+  cursor: pointer;
+}
+
+@media only screen and (max-width:1024px) and (min-width:700px) {
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background-color: blue;
+    padding: 10px;
+    text-align: center;
+    text-align: center;
+    color: whitesmoke;
+    font-size: larger;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  
+  .main{
+    display:flex;
+    align-items: center;
+  }
+  
+  .pic{
+    height: 650px;
+    width: 850px;
+    padding: 25px 25px;
+  }
+  
+  .footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: blue;
+    padding: 10px;
+    text-align: center;
+    text-align: center;
+    color: whitesmoke;
+    font-size:small;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  
+  .label{
+    text-align: center;
+    font-weight: bolder;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: black;
+    text-shadow: 2px;
+    margin:400px 50px;
+    font-size: 17px;
+  }
+  
+  .instruction{
+    text-align: center;
+    font-size: large;
+    margin: 500px 50px;
+  }
+  .input{
+    border-radius: 10px;
+    align-items:flex-end;
+    height: 40px;
+    width: 200px;
+    padding: 10px;
+    justify-content: center;
+    margin:10px 20px;
+  }
+  
+  .input2{
+    border-radius: 10px;
+    align-items:flex-end;
+    height: 40px;
+    width: 90px;
+    padding: 10px 15px;
+    justify-content: center;
+    margin-right: 0px;
+    margin:10px 80px;
+  }
+  
+  .input3{
+    border-radius: 10px;
+    align-items:flex-end;
+    height: 40px;
+    width: 90px;
+    padding: 10px 15px;
+    justify-content: center;
+    margin-right: 0px;
+    margin:10px 80px;
+  }
+  
+  .button{
+      align-items: center;
+      padding: 12px 25px;
+      border-radius: 20px;
+      background-color: blue;
+      color: honeydew;
+      font-size: medium;
+      margin-top: 30px;
+      margin-left: 60px;
+      justify-content: center;
+  }
+  .button:hover{
+    align-items: center;
+    padding: 12px 25px;
+    border-radius: 20px;
+    background-color: blue;
+    color: honeydew;
+    font-weight: bolder;
+    margin-top: 30px;
+    margin-left: 220px;
+    cursor: pointer;
+  }
+  
+  @media only screen and (max-width:1024px) and (min-width:700px) {
+    
+    
+  }
+  
+}
+
+@media only screen and (max-width:702px) and (min-width:300px){
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .main{
+    display:flex;
+    align-items: center;
+  }
+  .header{
+    background-color: blue;
+    padding: 10px;
+    text-align: center;
+    text-align: center;
+    color: whitesmoke;
+    font-size: larger;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  .pic{
+    display: none;
+  }
+  
+  .footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: blue;
+    padding: 10px;
+    text-align: center;
+    text-align: center;
+    color: whitesmoke;
+    font-size:small;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  .label{
+    text-align: center;
+    font-weight: bolder;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: black;
+    margin-top: 700px;
+    font-size: 40px;
+  }
+  
+  .instruction{
+    text-align: center;
+    font-size: large;
+    margin: 500px 50px;
+  }
+  .input{
+    border-radius: 10px;
+    align-items:flex-end;
+    height: 40px;
+    width: 200px;
+    padding: 10px;
+    justify-content: center;
+  }
+  
+  .input2{
+    border-radius: 10px;
+    align-items:flex-end;
+    height: 40px;
+    width: 90px;
+    padding: 10px;
+    justify-content: center;
+    margin-right: 0px;
+  }
+  
+  .input3{
+    border-radius: 10px;
+    align-items:flex-end;
+    height: 40px;
+    width: 90px;
+    padding: 10px;
+    justify-content: center;
+    margin-right: 0px;
+  }
+  
+  .button{
+      align-items: center;
+      padding: 12px 25px;
+      border-radius: 20px;
+      background-color: blue;
+      color: honeydew;
+      font-size: medium;
+      margin-top: 30px;
+      margin-left: 220px;
+  }
+  .button:hover{
+    align-items: center;
+    padding: 12px 25px;
+    border-radius: 20px;
+    background-color: blue;
+    color: honeydew;
+    font-weight: bolder;
+    margin-top: 30px;
+    margin-left: 220px;
+    cursor: pointer;
+  }
+  
+}
+
+
+  
+
+
